# pydantic-exportables

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: codeql.yml  python-package-macos-win.yml  python-package.yml
src/pydantic_exportables/: __init__.py  aliasmapper.py  csvexportable.py  exportable.py  importable.py  jsonexportable.py  pyobjectid.py  utils.py
tests/: test_aliasmapper.py  test_csvexportable.py  test_exportable_importable.py  test_jsonexportable.py  test_pyobjectid.py  test_utils.py
