[project]
name = "pydantic-exportables"
version = "1.0.2"
authors = [{ name = "Jylpah", email = "jylpah@gmail.com" }]
description = "Python Pydantic BaseModel extension and helpers for easier import/export to different formats (JSON, CSV, TXT)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: aiohttp",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiofiles>=23.1",
    "aiohttp>=3.9.1",
    "aiodns>=3.0",
    "aioconsole>=0.6",
    "aiocsv>=1.2",
    "Brotli>=1.1",
    "pydantic>=2.4",
    "pymongo>=4.6",
    "pyutils @ git+https://github.com/Jylpah/pyutils.git@main-1.0",
]

[project.optional-dependencies]
dev = [
    "build>=0.10",
    "mypy>=1.2",
    "pip-chill>=1.0",
    "pytest",
    "pytest-asyncio",
    "pytest-datafiles",
    "pytest-cov>=4.1",
    "pytest-timeout",
    "types-aiofiles>=23.1",
]


[project.urls]
"Homepage" = "https://github.com/Jylpah/pydantic-exportables"
"Bug Tracker" = "https://github.com/Jylpah/pydantic-exportables/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
build.targets.wheel.packages = ["src/pydantic_exportables"]
metadata.allow-direct-references = true


[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ['tmp']
mypy_path = ['src']

[tool.black]
# line-length = 100
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-v --cov=src"
filterwarnings = [
    'ignore:Inheritance class ThrottledClientSession from ClientSession is discouraged:DeprecationWarning',
]


[tool.pyright]
reportGeneralTypeIssues = false
