[project]
name = "pydantic-exportables"
version = "1.2"
authors = [{ name = "Jylpah", email = "jylpah@gmail.com" }]
description = "Python Pydantic BaseModel extension and helpers for easier import/export to different formats (JSON, CSV, TXT)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: aiohttp",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiofiles>=23.1",
    "aiohttp>=3.9.1",
    "aiodns>=3.0",
    "aioconsole>=0.6",
    "aiocsv>=1.2",
    "Brotli>=1.1",
    "Deprecated>=1.2",
    "pydantic>=2.4",
    "pymongo>=4.6",
    "result>=0.17.0",
    "pyutils @ git+https://github.com/Jylpah/pyutils.git@main-1.0",
]

[project.optional-dependencies]
dev = [
    "build>=0.10",
    "types-Deprecated>=1.2",
    "mypy>=1.2",
    "pip-chill>=1.0",
    "pytest",
    "pytest-asyncio",
    "pytest-datafiles",
    "pytest-cov>=4.1",
    "pytest-timeout",
    "ruff>=0.1.9",
    "types-aiofiles>=23.1",
]


[project.urls]
"Homepage" = "https://github.com/Jylpah/pydantic-exportables"
"Bug Tracker" = "https://github.com/Jylpah/pydantic-exportables/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
build.targets.wheel.packages = ["src/pydantic_exportables"]
metadata.allow-direct-references = true


[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ['tmp']
mypy_path = ['src']

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = false
warn_required_dynamic_aliases = false
warn_untyped_fields = true

[tool.ruff]
# line-length = 88
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
indent-width = 4
extend-include = ["*.ipynb"]
extend-exclude = [".venv", ".vscode" ] 
fixable = ["ALL"]


[tool.pyright]
reportGeneralTypeIssues = false
reportInvalidStringEscapeSequence = false
typeCheckingMode = "off"


[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-v --cov=src"
pythonpath = "src" # avoid import path append in test files
filterwarnings = [
    'ignore:Inheritance class ThrottledClientSession from ClientSession is discouraged:DeprecationWarning',
]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    ]

