[project]
name = "pydantic-exportables"
version = "1.3.2"
authors = [{ name = "Jylpah", email = "jylpah@gmail.com" }]
description = "Python Pydantic BaseModel extension and helpers for easier import/export to different formats (JSON, CSV, TXT)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: aiohttp",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiofiles>=23.1",
    "aiohttp>=3.9.1",
    "aiodns>=3.0",
    "aioconsole>=0.6",
    "aiocsv>=1.2",
    "Brotli>=1.1",
    "Deprecated>=1.2",
    "multilevellogger",
    "eventcounter>=0.4.2",
    "pydantic>=2.4",
    "pymongo>=4.6",
    "result>=0.17.0",
]


[project.urls]
"Homepage" = "https://github.com/Jylpah/pydantic-exportables"
"Bug Tracker" = "https://github.com/Jylpah/pydantic-exportables/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
build.targets.wheel.packages = ["src/pydantic_exportables"]
metadata.allow-direct-references = true


[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ['tmp']
mypy_path = ['src']

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = false
warn_required_dynamic_aliases = false
warn_untyped_fields = true

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "demos/**/*.py"]
indent-width = 4
extend-include = ["*.ipynb"]
extend-exclude = [".venv", ".vscode"]
lint.fixable = ["ALL"]


[tool.pyright]
reportGeneralTypeIssues = false
reportInvalidStringEscapeSequence = false
typeCheckingMode = "off"
include = ["src", "tests"]
extraPaths = ["src"]


[tool.pytest.ini_options]
minversion = "7.4"
addopts = ["-v", "--cov=src"]
testpaths = ["tests", "demos"]
pythonpath = "src" # avoid import path append in test files
filterwarnings = [
    'ignore:Inheritance class ThrottledClientSession from ClientSession is discouraged:DeprecationWarning',
]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    ]

[dependency-groups]
dev = [
    "codecov-cli>=11.2.8",
    "mypy>=1.20.1",
    "pydantic>=2.13.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-datafiles>=3.0.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.11",
    "types-aiofiles>=25.1.0.20260409",
    "types-deprecated>=1.3.1.20260408",
]

